more J2EE for glow